<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright 2010 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Titles for IME  -->
    

    <!-- Preference settings -->
    <string name="app_name">维语测试</string>
    <string name="action_settings">设置</string>
    <string name="pref_licensing">授權資訊</string>
    <string name="pref_vibrate_title">按鍵震動</string>
    <string name="pref_ui">界面設置</string>
    <string name="pref_sound_title">按鍵音效</string>
    <string name="pref_keyboard_preview_title">按鍵提示</string>
    <string name="pref_keyboard_preview_summary">打字速度較快時建議關閉</string>
    <string name="pref_py_prompt_title">編碼提示</string>
    <string name="pref_cand_num">候選項數</string>
    <string name="pref_cand_font_size">候選字號</string>
    <string name="pref_cand_max_phrase">候選詞長</string>
    <string name="unlimited">不限</string>
    <string name="pref_key_font_size">鍵盤字號</string>

    <string name="pref_function">功能設置</string>
    <string name="pref_init_chinese">初始中文</string>
    <string name="pref_full_py_title">全碼輸入</string>
    <string name="pref_full_py_summary">禁用漸進提示，出字慢時建議开啟</string>
    <string name="pref_single_title">單字模式</string>
    <string name="pref_association_title">詞語聯想</string>
    <string name="pref_sc_title">輸出簡體</string>
    <string name="pref_commit_py_title">輸出編碼</string>
    <string name="pref_commit_py_summary">出字時標出編碼，如：拼音(pin yin)</string>
    <string name="pref_importdb">導入碼表</string>
    <string name="pref_importdb_summary">從SD卡根目錄導入*.db或.yaml碼表</string>
    <string name="pref_exportdb">導出碼表</string>
    <string name="pref_exportdb_summary">將碼表導出至SD卡根目錄</string>

    <string name="set_ime">全局設定</string>
    <string name="set_schema">設定本方案</string>
    <string name="other_ime">其他輸入法</string>
    <string name="pronunciation">【%s】的編碼</string>
    <string name="close">關閉</string>
    <string name="initdb_message">正在初始化碼表</string>
    <string name="importdb_message">正在導入“%s”</string>
    <string name="importdb_success">碼表導入成功</string>
    <string name="importdb_failure">碼表導入失敗</string>
    <string name="exportdb_message">正在導出碼表</string>
    <string name="exportdb_success">碼表導出成功</string>
    <string name="exportdb_failure">碼表導出失敗</string>
      <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>

    <!-- Labels for subtype -->
    <string name="label_subtype_generic">%s</string>
    <string name="label_subtype_en_GB">English (GB)</string>
 <string name="keyboard_switch">切换</string>
    <string name="keyboard_edit">编辑</string>
    <string name="keyboard_qwerty_cn">全键盘拼音</string>
    <string name="keyboard_qwerty_en">全键盘英文</string>
    <string name="keyboard_phone_cn">数字拼音</string>
    <string name="keyboard_stroke">笔画</string>
    <string name="keyboard_hw">手写</string>
    <string name="symbol_common">常用</string>
    <string name="edit_clear">清空</string>
    <string name="edit_select_all">全选</string>
    <string name="edit_cut">剪切</string>
    <string name="edit_copy">复制</string>
    <string name="edit_paste">粘贴</string>
    <string name="tab_general">设置</string>
    <string name="tab_skin">皮肤</string>
    <string name="tab_hot_word">热词</string>
    <string name="tab_guide">向导</string>
    <string name="tab_words">词库</string>
    <string name="open_zoozee_ime">Open zoozee IME</string>
    <string name="open_zoozee_ime_1">First：Enable zoozee IME</string>
    <string name="open_zoozee_ime_2">Next：Switch zoozee IME</string>
    <string name="open_zoozee_ime_select">Go to select</string>
    <string name="open_zoozee_ime_switch">Go to switch</string>
    <!-- Titles for ImePreference -->
    <string name="settings_name">Sample Soft Keyboard Settings</string>
    <string name="language_selection_title">Input languages</string>
    <string name="select_language">Select input languages</string>
    <string name="general_category">General</string>
     <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;。.:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
</resources>
